2003-11-19  Kazu Hirata  <kazu@cs.umass.edu>

	* config/tc-arc.c: Remove a local prototype of atof_ieee.
	* config/tc-ip2k.c: Likewise.
	* config/tc-iq2000.c: Likewise.
	* config/tc-tic30.c: Remove a comment.

2003-11-19  Bob Wilson  <bob.wilson@acm.org>

	* config/tc-xtensa.c (xg_emit_insn): Include "dwarf2dbg.h" and add
	call to dwarf2_emit_insn.

2003-11-18  Maciej W. Rozycki  <macro@ds2.pg.gda.pl>

	* config/tc-mips.c (macro): Handle new macros: "lca" and "dlca"
	for loading addresses using CALL relocations.
	Don't emit CALL relocations when a base register is used.

2003-11-15  Maciej W. Rozycki  <macro@ds2.pg.gda.pl>

	* config/tc-mips.c: Formatting fixes.

2003-11-14  Ben Elliston  <bje@wasabisystems.com>

	* config/tc-arm.c (arm_elf_change_section): Not static.

2003-11-13  Nick Clifton  <nickc@redhat.com>

	* tc-arm.c (mapping_state): New function.  Emit a mapping
	symbol if necessary.
        (arm_elf_change_section): New function.  Intercept section
	changes and generate mapping symbols.
        (s_bss): Likewise.
        (s_arm_elf_cons): Likewise.
        (opcode_select): Choose the correct mapping state.
        (md_assemble): Likewise.
        * tc-arm.h (md_elf_section_change_hook): Define.
        * doc/c-arm.texi (ARM Mapping Symbols): New node.
	* NEWS: Mention new feature.

2003-11-12  Daniel Jacobowitz  <drow@mvista.com>

	* Makefile.am (install, install-info, RECURSIVE_TARGETS): Define.
	* doc/Makefile.am (install-info): Define.

	* aclocal.m4: Regenerate.
	* Makefile.in: Regenerate.
	* doc/Makefile.in: Regenerate.

2003-11-11  Dmitry Semyonov <Dmitry.Semyonov@oktet.ru>

	* configure.in: Add support for arm-wince-pe target.
	* configure: Regenerate.

2003-11-11  Jan Hubicka  <jh@suse.cz>

	* config/tc-i386.c (tc_i386_fix_adjustable):

2003-11-10  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-ia64.c (ia64_handle_align): Remove bogus be_nop.

2003-11-10  Alan Modra  <amodra@bigpond.net.au>
